--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chapri - Chat Privately</title>
+    <title>Chapriv - Chat Privately!</title>
 
     <!-- bootstrap include -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- fontawesome include -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -37,13 +40,13 @@
         <div class="collapse navbar-collapse navbar-items" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link nav-link-anchor" href="#">Who Are We?</a>
+                    <a class="nav-link nav-link-anchor" href="external-html-scripts/who-are-we.html" target="_blank">Who Are We?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-anchor" href="#">Terms and Conditions</a>
+                    <a class="nav-link nav-link-anchor" href="external-html-scripts/terms-n-conditions.html" target="_blank">Terms and Conditions</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-anchor" href="#">Contact Us</a>
+                    <a class="nav-link nav-link-anchor" href="external-html-scripts/contact-us.html" target="_blank">Contact Us</a>
                 </li>
             </ul>
         </div>
