added text area and some styling to text area

--- a/index.html
+++ b/index.html
@@ -53,7 +53,21 @@
     </nav>
 
     <!-- middle section that contains of chat and controls -->
+    <div class="row middle-section-div">
 
+        <div class="col col-lg-6 col-md-12 col-sm-12 col-12 middle-section-col">
+            <form class="form-text-area">
+                <div class="form-group text-area-div">
+                    <label for="exampleFormControlTextarea1"><img class="img-send" src="resources/send.png" alt="paper-plane-img">Write Your Message Here</label>
+                    <textarea class="form-control text-area" id="exampleFormControlTextarea1" rows="10"></textarea>
+                </div>
+            </form>
+        </div>
+        <div class="col col-lg-6 col-md-12 col-sm-12 col-12 middle-section-col">
+
+        </div>
+
+    </div>
 
     <!-- bottom section includess copyright and anchor to rules  -->
 
