--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <!-- middle section that contains of chat and controls -->
     <div class="row middle-section-div">
 
+        <!-- textarea section or you can call it as message section -->
+
         <div class="col col-lg-6 col-md-12 col-sm-12 col-12 middle-section-col">
             <form class="form-text-area">
                 <div class="form-group text-area-div">
@@ -63,8 +65,32 @@
                 </div>
             </form>
         </div>
-        <div class="col col-lg-6 col-md-12 col-sm-12 col-12 middle-section-col">
 
+        <!-- youtube live streams carousel section -->
+
+        <div class="col col-lg-6 col-md-12 col-sm-12 col-12 middle-section-col">
+            <div id="carousel-streams" class="carousel slide" data-ride="carousel" data-interval="false">
+                <label for="exampleFormControlTextarea1"><img class="img-send" src="resources/send.png" alt="paper-plane-img">Write Your Message Here</label>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <iframe src="https://www.youtube.com/embed/5qap5aO4i9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="..." alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="..." alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev carousel-control-btn-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
 
     </div>
