--- a/external-html-scripts/contact-us.html
+++ b/external-html-scripts/contact-us.html
@@ -9,6 +9,9 @@
 
     <!-- bootstrap include -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- fontawesome include -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -19,12 +22,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Ubuntu&display=swap" rel="stylesheet">
 
     <!-- stylesheet include -->
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/contact-us-styles.css">
 
 </head>
 
 <body>
-    <p>contact-us</p>
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand navbar-heading" href="../index.html">Chapriv - Contact Us</a>
+    </nav>
+
+    <div class="middle-section">
+        <p>Choose the topic from below</p>
+        <div class="dropdown dropdown-button">
+            <button class="btn btn-secondary btn-lg btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Dropdown button
+      </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+        </div>
+
+        <form>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Enter Your Message</label>
+                <textarea class="form-control text-area" id="exampleFormControlTextarea1" rows="10"></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control email-input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+
+            <button type="submit" class="btn btn-outline btn-dark btn-lg btn-block">Submit</button>
+
+        </form>
+
+    </div>
+
 </body>
 
 </html>
