--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- fontawesome include -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css" integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous" />
 
     <!-- google fonts include -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,41 +60,47 @@
 
         <!-- textarea section or you can call it as message section -->
 
-        <div class="col col-lg-6 col-md-12 col-sm-12 col-12 middle-section-col">
+        <div class="col col-lg-6 col-md-12 col-sm-12 col-12 text-col">
             <form class="form-text-area">
                 <div class="form-group text-area-div">
-                    <label for="exampleFormControlTextarea1"><img class="img-send" src="resources/send.png" alt="paper-plane-img">Write Your Message Here</label>
-                    <textarea class="form-control text-area" id="exampleFormControlTextarea1" rows="10"></textarea>
+                    <label for="exampleFormControlTextarea1">By starting to chat you will agree "Terms and Conditions"</label>
+                    <textarea readonly class="form-control text-area" id="exampleFormControlTextarea1" rows="10"></textarea>
                 </div>
             </form>
+            <input class="form-control mx-sm-3 mb-2 message-area" type="text" placeholder="Enter Your Message!">
+            <button type="button" class="btn btn-outline-primary send-btn"><i class="fas fa-light fa-share send-logo"></i>&nbsp;&nbsp;Send</button>
         </div>
 
         <!-- youtube live streams carousel section -->
 
-        <div class="col col-lg-6 col-md-12 col-sm-12 col-12 middle-section-col">
-            <div id="carousel-streams" class="carousel slide" data-ride="carousel" data-interval="false">
-                <label for="exampleFormControlTextarea1"><img class="img-send" src="resources/send.png" alt="paper-plane-img">Write Your Message Here</label>
+        <div class="col col-lg-6 col-md-12 col-sm-12 col-12 stream-col">
+            <div id="carouselExampleControls" class="carousel slide carousel-slides" data-ride="carousel" data-interval="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <iframe src="https://www.youtube.com/embed/5qap5aO4i9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="..." alt="Second slide">
+                        <iframe src="https://www.youtube.com/embed/t2pU3iTkv3w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="..." alt="Third slide">
+                        <iframe src="https://www.youtube.com/embed/21qNxnCS8WU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="carousel-item">
+                        <iframe src="https://www.youtube.com/embed/DrmcAh2FRHQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
-                <a class="carousel-control-prev carousel-control-btn-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
+
         </div>
+
 
     </div>
 
