created who are and styled

--- a/external-html-scripts/who-are-we.html
+++ b/external-html-scripts/who-are-we.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chapriv - Who Are We?</title>
-
     <!-- bootstrap include -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- fontawesome include -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -19,12 +21,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Ubuntu&display=swap" rel="stylesheet">
 
     <!-- stylesheet include -->
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/who-are-we-styles.css">
 
 </head>
 
 <body>
-    <p>who-are-we</p>
+
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand navbar-heading" href="../index.html">Chapriv - Who Are We?</a>
+    </nav>
+
+    <div class="section-mehce">
+        <h1>I'm Mehce Faruk Unisen</h1>
+        <p>Hi! I'm currently proud student of Yildiz Technical University - Electronics and Commnunication Engineering. My main interest is focused on Logic and C/C++ programming altought I enjoy anything about computer! Therefore I'm learning some Web Development.
+            This is my first real-world project. If you are intereseted in recruiting me, feel free to reach me out!
+        </p>
+        <a href="https://www.linkedin.com/in/mehcefarukunisen" target="_blank"><img src="../resources/linkedin-logo.png" alt="LinkedIn" width="60px" height="60px"></a>
+        <a href="https://github.com/MehceUnisen" target="_blank"><img class="github-img" src="../resources/github-logo.png" alt="GitHub" width="50px" height="50px"></a>
+    </div>
+
+    <div class="section-omer">
+        <h1>I'm Omer Yasin Cur</h1>
+        <p>Hi! I'm currently student of Bogazici University - Electric and Electronics Engineering. I'm the one who came up this idea. I know that this idea is not uniqie but our aim was to make this side uniqie on it's own way!
+        </p>
+        <a href="https://twitter.com/Cheeeeriff?t=20Dc3XaakJD6b-TvD_Expw&s=08" target="_blank"><img class="twitter-logo" src="../resources/twitter-logo.png" alt="Twitter"></a>
+    </div>
+
+
 </body>
 
 </html>
