--- a/external-html-scripts/contact-us.html
+++ b/external-html-scripts/contact-us.html
@@ -62,6 +62,12 @@
 
     </div>
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark bottom-bar">
+        <div>
+            <h1> © 2022 Mehce Faruk Unisen / Omer Yasin Cur</h1>
+        </div>
+    </nav>
+
 </body>
 
 </html>
