--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 
     <!-- bottom section includes copyright -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark bottom-bar">
-        <div>
+    <nav class="navbar navbar-dark bg-dark bottom-bar">
+        <div class="col col-lg-12 col-md-12 col-sm-12">
             <h1> © 2022 Mehce Faruk Unisen / Omer Yasin Cur</h1>
         </div>
     </nav>
