fixed text area and button problems

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <textarea readonly class="form-control text-area" id="exampleFormControlTextarea1" rows="10"></textarea>
                 </div>
             </form>
-            <div class="row">
+            <div class="row sorunlu-yer">
                 <div class="col col-lg-9 col-md-9 col-sm-9 col-9">
                     <input class="form-control mx-sm-3 mb-2 message-area" type="text" placeholder="Enter Your Message!">
                 </div>
