navbar texts moved to right and bottom bar fixed!

--- a/index.html
+++ b/index.html
@@ -35,24 +35,26 @@
 
     <!-- navbar includes the name of the site and motto-->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbarin-kendisi">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark navbarin-kendisi">
         <a class="navbar-brand navbar-chapriv-text" href="#">Chapriv - Chat Privately!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse navbar-items" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link nav-link-anchor" href="external-html-scripts/who-are-we.html" target="_blank">Who Are We?</a>
+                    <a class="nav-link nav-link-anchor" href="external-html-scripts/who-are-we.html" target="_blank">&nbsp;&nbsp;Who Are We?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-anchor" href="external-html-scripts/terms-n-conditions.html" target="_blank">Terms and Conditions</a>
+                    <a class="nav-link nav-link-anchor" href="external-html-scripts/terms-n-conditions.html" target="_blank">&nbsp;&nbsp;Terms and Conditions</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-anchor" href="external-html-scripts/contact-us.html" target="_blank">Contact Us</a>
+                    <a class="nav-link nav-link-anchor" href="external-html-scripts/contact-us.html" target="_blank">&nbsp;&nbsp;Contact Us</a>
                 </li>
             </ul>
         </div>
+
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
     </nav>
 
     <!-- middle section that contains of chat and controls -->
@@ -115,11 +117,11 @@
 
     <!-- bottom section includes copyright -->
 
-    <nav class="navbar navbar-dark bg-dark bottom-bar">
+    <div class="bottom-bar-div">
         <div class="col col-lg-12 col-md-12 col-sm-12">
             <h1> © 2022 Mehce Faruk Unisen / Omer Yasin Cur</h1>
         </div>
-    </nav>
+    </div>
 
     <!-- javascript include -->
     <script src="src/index.js"></script>
