fixed bottom bar problems

--- a/external-html-scripts/contact-us.html
+++ b/external-html-scripts/contact-us.html
@@ -60,13 +60,18 @@
 
         </form>
 
+
+
     </div>
 
-    <nav class="navbar navbar-dark bg-dark bottom-bar">
+    <div class="bottom-bar-div">
         <div class="col col-lg-12 col-md-12 col-sm-12">
             <h1> © 2022 Mehce Faruk Unisen / Omer Yasin Cur</h1>
         </div>
-    </nav>
+    </div>
+
+
+
 
 </body>
 
