--- a/external-html-scripts/who-are-we.html
+++ b/external-html-scripts/who-are-we.html
@@ -47,11 +47,12 @@
         <a href="https://twitter.com/Cheeeeriff?t=20Dc3XaakJD6b-TvD_Expw&s=08" target="_blank"><img class="twitter-logo" src="../resources/twitter-logo.png" alt="Twitter"></a>
     </div>
 
-    <nav class="navbar navbar-dark bg-dark bottom-bar">
+    <div class="bottom-bar-div">
         <div class="col col-lg-12 col-md-12 col-sm-12">
             <h1> © 2022 Mehce Faruk Unisen / Omer Yasin Cur</h1>
         </div>
-    </nav>
+    </div>
+
 
 
 </body>
