added terms n conditions site

--- a/external-html-scripts/terms-n-conditions.html
+++ b/external-html-scripts/terms-n-conditions.html
@@ -19,12 +19,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Ubuntu&display=swap" rel="stylesheet">
 
     <!-- stylesheet include -->
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/terms-n-conditions.css">
 
 </head>
 
 <body>
-    <p>terms-n-conditions</p>
+
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand navbar-heading" href="../index.html">Chapriv - Terms and Conditions</a>
+    </nav>
+    <div>
+        <h1 class="main-text">Don't be idiot, and don't be pervert.</h1>
+        <h2 class="bottom-text">Thank you for cooperation!</h2>
+    </div>
+
+    <div class="x">
+        <div class="bottom-bar-div">
+            <div class="col col-lg-12 col-md-12 col-sm-12">
+                <h1> © 2022 Mehce Faruk Unisen / Omer Yasin Cur</h1>
+            </div>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
